--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<h1 align="center">Movie Ratings</h1>
 		<table id="movie_table">
 			<tr>
+				<td>id</td>
 				<td>name</td>
 				<td>year</td>
 				<td>image</td>
@@ -37,15 +38,18 @@
 				var table = document.getElementById("movie_table");
 				var row = table.insertRow(-1);
 
-				var cell1 = row.insertCell(0);
+
+				var id_cell = row.insertCell(0);
+				id_cell.innerHTML = movie.id;
+				var cell1 = row.insertCell(1);
 				cell1.innerHTML = movie.name;
-				var cell2 = row.insertCell(1);
+				var cell2 = row.insertCell(2);
 				cell2.innerHTML = movie.year;
-				var cell3 = row.insertCell(2);
+				var cell3 = row.insertCell(3);
 				cell3.innerHTML = "<img src=\"" + movie.image + "\">";
-				var cell4 = row.insertCell(3);
+				var cell4 = row.insertCell(4);
 				cell4.innerHTML = movie.rating;
-				var cell5 = row.insertCell(4);
+				var cell5 = row.insertCell(5);
 				cell5.innerHTML = movie.date;
 			};
 
@@ -57,7 +61,8 @@
 				movie["year"] = prompt("What year was it released in?");
 				movie["image"] = prompt("Link to movie image?");
 				movie["rating"] = prompt("Rating?");
-				movie["date"] = prompt("When did you watch it?");
+				movie["date"] = new Date();  //current date and time
+				movie["id"] = getNextID();
 
 				if(localStorage.movies)
 				{
@@ -72,6 +77,20 @@
 					array.push(movie);
 					localStorage.movies = JSON.stringify(array);
 					addMovie(movie);
+				}
+			}
+
+			function getNextID() { //return 1-based indexing
+				if(localStorage.nextID)
+				{
+					var returnval = Number(localStorage.nextID);
+					localStorage.nextID = returnval + 1;
+					return returnval;
+				}
+				else
+				{
+					localStorage.nextID = 2;
+					return 1;
 				}
 			}
 
